OneDrive/Pictures/Desktop/manifest/pods/RBAC/ingess/deploy1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
   minReadySeconds: 5
   replicas: 2
   selector:
       matchLabels: 
         app: nginx
   strategy:
       type: RollingUpdate
       rollingUpdate: 
            maxSurge: 25%
            maxUnavailable: 25%
   template: 
       metadata:
          labels: 
             app: nginx
       spec:
         containers:
            - name: nginx
              image: jenkins/jenkins
              ports:
                 - name: nginx
                   containerPort: 80
              resources:
                  limits:
                    cpu: "500m"
                    memory: "250Mi"
