OneDrive/Pictures/Desktop/manifest/pods/RBAC/ingess/service.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: nginx-svc
spec:
   type: ClusterIP
   selector:
      app: nginx
   ports:
       - name: nginx
         port: 80
         targetPort: 80
