OneDrive/Pictures/Desktop/manifest/pods/RBAC/ingess/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  -  host: ngnix.example.com
     http:
        paths:
           - path: /nginx
             pathType: Prefix
             backend:
               service:
                 name: nginx-svc
                 port:  
                    number: 80
